Added new interview questions